refactor(pdf-generation): modularize service and improve error handling
Se ha refactorizado el servicio `FormulariosToPdfService` para mejorar su modularidad y mantenibilidad. Se extrajo la lógica común de generación de PDFs en métodos privados, se mejoró el manejo de errores y se añadió una verificación para `cuota.getCompensada() == 0` en la lógica de impresión de cuotas.

Además, se actualizó la documentación en `CHANGELOG.md` y `README.md` para reflejar la nueva versión `1.3.0` y los cambios realizados. La versión del proyecto en `pom.xml` también se actualizó a `1.3.0`.

Closes: #81